Replace explicit local variable types with var.